--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,14 @@
 $primary-color: #444;
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   background: $primary-color;
   color: #fff;
+  height: 100%;
+  margin: 0;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  line-height: 1.5;
 }
