--- a/scss/main.scss
+++ b/scss/main.scss
@@ -26,6 +26,10 @@ h3 {
   &.sm-heading {
     margin-bottom: 2rem;
     padding: 0.2rem 1rem;
-    // background: rgba(lighten($primary-color, 2), 0.5);
   }
+}
+
+a {
+  color: #fff;
+  text-decoration: none;
 }
