--- a/scss/main.scss
+++ b/scss/main.scss
@@ -37,4 +37,16 @@ a {
 main {
   padding: 4rem;
   min-height: calc(100vh - 60px);
+  .icons {
+    margin-top: 1rem;
+
+    a {
+      padding: 0.4rem;
+
+      &:hover {
+        color: $secondary-color;
+        @include easeOut();
+      }
+    }
+  }
 }
