--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@ body {
   line-height: 1.5;
 }
 
+//Headings
 h1,
 h2,
 h3 {
@@ -29,6 +30,7 @@ h3 {
   }
 }
 
+//Links
 a {
   color: #fff;
   text-decoration: none;
