--- a/scss/main.scss
+++ b/scss/main.scss
@@ -63,3 +63,12 @@ main {
     transform: rotate(180deg);
   }
 }
+
+.menu-btn {
+  position: absolute;
+  z-index: 3;
+  right: 35px;
+  top: 35px;
+  cursor: pointer;
+  @include easeOut;
+}
