made line rotate and turn red

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -83,5 +83,16 @@ main {
   //Rotate Into X With Menu Lines
   &.close {
     transform: rotate(180deg);
+
+    .btn-line {
+      // Line 1 - Rotate
+      &:nth-child(1) {
+        background: red;
+      }
+
+      //Line 2 - Hide
+
+      // Line 3 - Rotate
+    }
   }
 }
