made line reposition and rotate

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -87,7 +87,7 @@ main {
     .btn-line {
       // Line 1 - Rotate
       &:nth-child(1) {
-        background: red;
+        transform: rotate(45deg) translate(5px, 5px);
       }
 
       //Line 2 - Hide
