--- a/scss/main.scss
+++ b/scss/main.scss
@@ -96,6 +96,9 @@ main {
       }
 
       // Line 3 - Rotate
+      &:nth-child(3) {
+        transform: rotate(-45deg) translate(7px, -6px);
+      }
     }
   }
 }
